Improved connection Routing to JSP

--- a/main/webapp/view/deprecated/index(deprec).html
+++ b/main/webapp/view/deprecated/index(deprec).html
@@ -61,13 +61,18 @@
 			</div>
 		</form>
 		<div id="container-list" class="pb-4">
-			<table class="table" id="item">
+			<!-- 			<table class="table" id="item">
 				<tr id="test">
-					<td id="check"><input id="task-'count'"  type="checkbox" onchange="updateTaskCheck(this)" checked ></td>
-					<td><input type="text" id="item" value="task.getText()" onfocus="this.oldvalue=this.value" onchange="updateTaskText(this.value,this.oldvalue)"></td>  
-            		<td id="delete"><i id="trash" class="fas fa-trash-alt" style="font-size: large" onclick="deleteTask(this)"></i></td>
+					<td style="width: 2%;"><input id="task-" type="checkbox"
+						onchange="setChecked(this)"></td>
+					<td><input type="text" id="item" value="test"
+						onfocus="this.oldvalue=this.value"
+						onchange="updateTask(this.value,this.oldvalue)"></td>
+					<td style="width: 10%;" id="delete"><i id="trash"
+						class="fas fa-trash-alt" style="font-size: large"
+						onclick="deleteAnime();"></i></td>
 				</tr>
-			</table>
+			</table> -->
 		</div>
 	</div>
 </body>
